// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Div indicator test should create block with all properties 1`] = `
{
  "type": "indicator",
  "active_item_color": "#000",
  "active_item_size": 1,
  "animation": "worm",
  "inactive_item_color": "#000",
  "minimum_item_size": 1,
  "pager_id": "bla",
  "shape": {
    "type": "rounded_rectangle",
    "corner_radius": {
      "type": "fixed",
      "unit": "dp",
      "value": 1
    },
    "item_height": {
      "type": "fixed",
      "unit": "sp",
      "value": 1
    },
    "item_width": {
      "type": "fixed",
      "value": 1
    }
  },
  "space_between_centers": {
    "type": "fixed",
    "value": 1
  }
}
`;

exports[`Div indicator test should create card with templated properties in indicator block 1`] = `
{
  "templates": {
    "card": {
      "type": "indicator",
      "shape": {
        "type": "rounded_rectangle",
        "$item_height": "s_height"
      },
      "$active_item_color": "color2",
      "$active_item_size": "a_size",
      "$animation": "anima",
      "$inactive_item_color": "color1",
      "$minimum_item_size": "m_size",
      "$pager_id": "id",
      "$space_between_centers": "space"
    }
  },
  "card": {
    "log_id": "id",
    "states": [
      {
        "state_id": 1,
        "div": {
          "type": "card",
          "id": "red",
          "space": {
            "type": "fixed",
            "value": 1
          },
          "color1": "#000",
          "color2": "#000",
          "s_height": {
            "type": "fixed",
            "value": 1
          },
          "a_size": 1,
          "m_size": 1,
          "anima": "slider"
        }
      }
    ]
  }
}
`;

exports[`Div indicator test should create simple indicator block 1`] = `
{
  "type": "indicator",
  "pager_id": "bla"
}
`;

exports[`Div indicator test should create templated indicator block 1`] = `
{
  "title_text": {
    "type": "indicator",
    "shape": {
      "type": "rounded_rectangle"
    },
    "$active_item_color": "color2",
    "$active_item_size": "a_size",
    "$animation": "anima",
    "$inactive_item_color": "color1",
    "$minimum_item_size": "m_size",
    "$pager_id": "id",
    "$space_between_centers": "space"
  }
}
`;
